Setting base for shell.
- Added base commands for shell.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+shell.out.info=CYAN
+shell.out.success=GREEN
+shell.out.warning=YELLOW
+shell.out.error=RED
+shell.prompt=dex:>
+app.name=dex-desktop-cli
+app.logging.caller-data=false
+app.logging.time-stamp-pattern=yyyy-MM-dd'T'HH:mm:ss.SSS
+app.logging.time-zone=UTC
