--- a/pom.xml
+++ b/pom.xml
@@ -1,49 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<artifactId>dex</artifactId>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<groupId>org.springframework.boot</groupId>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<artifactId>spring-boot-starter</artifactId>
-			<groupId>org.springframework.boot</groupId>
-		</dependency>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>dex</artifactId>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <artifactId>spring-boot-starter</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
 
-		<dependency>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<exclusions>
-				<exclusion>
-					<artifactId>junit-vintage-engine</artifactId>
-					<groupId>org.junit.vintage</groupId>
-				</exclusion>
-			</exclusions>
-			<groupId>org.springframework.boot</groupId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<description>Demo project for Spring Boot</description>
-	<groupId>styx.studio</groupId>
-	<modelVersion>4.0.0</modelVersion>
-	<name>desktop-cli</name>
+    <dependency>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>junit-vintage-engine</artifactId>
+          <groupId>org.junit.vintage</groupId>
+        </exclusion>
+      </exclusions>
+      <groupId>org.springframework.boot</groupId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <version>1.18.10</version>
+    </dependency>
+    <dependency>
+      <artifactId>log4j</artifactId>
+      <groupId>log4j</groupId>
+      <version>1.2.17</version>
+    </dependency>
+    <dependency>
+      <artifactId>spring-shell-starter</artifactId>
+      <groupId>org.springframework.shell</groupId>
+      <version>2.0.0.RELEASE</version>
+    </dependency>
+    <dependency>
+      <artifactId>jackson-databind</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <version>2.9.10.4</version>
+    </dependency>
+  </dependencies>
+  <description>Demo project for Spring Boot</description>
+  <groupId>styx.studio</groupId>
+  <modelVersion>4.0.0</modelVersion>
+  <name>desktop-cli</name>
 
-	<parent>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<groupId>org.springframework.boot</groupId>
-		<relativePath/>
-		<version>2.2.6.RELEASE</version> <!-- lookup parent from repository -->
-	</parent>
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <relativePath/>
+    <version>2.2.6.RELEASE</version> <!-- lookup parent from repository -->
+  </parent>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
 
-	<version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
 
 </project>
