--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,25 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <version>2.9.10.4</version>
     </dependency>
+    <dependency>
+      <artifactId>tmdb-java</artifactId>
+      <groupId>com.uwetrottmann.tmdb2</groupId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>commons-io</artifactId>
+      <groupId>commons-io</groupId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <artifactId>h2</artifactId>
+      <groupId>com.h2database</groupId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
   </dependencies>
   <description>Demo project for Spring Boot</description>
   <groupId>styx.studio</groupId>
