--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,10 @@ shell.out.error=RED
 shell.prompt=dex:>
 app.name=dex-desktop-cli
 app.logging.caller-data=false
+app.logging.level=INFO
 app.logging.time-stamp-pattern=yyyy-MM-dd'T'HH:mm:ss.SSS
 app.logging.time-zone=UTC
+spring.datasource.url=jdbc:h2:file:./data/app_db;
+spring.h2.console.enabled=true
+dex.file-types=mkv,mp4,avi
+dex.target-file-format=/language/title [year]
