--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,8 @@ app.logging.time-zone=UTC
 spring.datasource.url=jdbc:h2:file:./data/app_db;
 spring.h2.console.enabled=true
 dex.file-types=mkv,mp4,avi
-dex.target-file-format=/language/title [year]
+dex.output.folder-structure=$original_language$
+dex.output.duplicate-folder-structure=$original_language$\\$title$ [$year$]
+dex.output.duplicate-file-structure=$title$ [$year$] [$count$].$extension$
+dex.output.duplicate-file-structure.regexp=(?<title>[a-zA-Z )(]+) *\\[(?<year>[0-9]{4})] \\[(?<count>[0-9]+)].(?<extension>[a-z0-9]{2,4})
+dex.output.file-structure=$title$ [$year$].$extension$
