--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,6 @@
     <java.version>1.8</java.version>
   </properties>
 
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
 
 </project>
