SQL Autocreate hotfix.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ dex.output.duplicate-folder-structure=$original_language$\\$title$ [$year$]
 dex.output.duplicate-file-structure=$title$ [$year$] [$count$].$extension$
 dex.output.duplicate-file-structure.regexp=(?<title>[a-zA-Z )(]+) *\\[(?<year>[0-9]{4})] \\[(?<count>[0-9]+)].(?<extension>[a-z0-9]{2,4})
 dex.output.file-structure=$title$ [$year$].$extension$
+spring.jpa.hibernate.ddl-auto=create
