--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
       <version>1.18.10</version>
     </dependency>
     <dependency>
-      <artifactId>log4j</artifactId>
-      <groupId>log4j</groupId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.2</version>
     </dependency>
     <dependency>
       <artifactId>spring-shell-starter</artifactId>
