Force language additional parameter.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ app.logging.time-stamp-pattern=yyyy-MM-dd'T'HH:mm:ss.SSS
 app.logging.time-zone=UTC
 spring.datasource.url=jdbc:h2:file:./data/app_db;
 spring.h2.console.enabled=true
+dex.language=
 dex.file-types=mkv,mp4,avi
 dex.output.folder-structure=$original_language$
 dex.output.duplicate-folder-structure=$original_language$\\$title$ [$year$]
