--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>commons-text</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>29.0-jre</version>
+    </dependency>
   </dependencies>
   <description>Demo project for Spring Boot</description>
   <groupId>styx.studio</groupId>
